--- a/style.css
+++ b/style.css
@@ -1,32 +1,27 @@
 body {
     overflow: hidden;
-    height: 100vh;
-    background-color: rgba(255, 127, 80, 0.534);
+    background-color: rgb(48, 47, 47);
+    color: white;
 }
 
 .container {
     display: flex;
-    flex-flow: row nowrap;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    width: 100vw;
+    height: 100vh;
 }
 
-.card {
-    border: 0.1rem solid black;
+.boxes {
+    border: 0.1rem solid white;
+    padding: 4rem;
+    border-radius: 1rem;
+}
+
+button {
     border-radius: 0.5rem;
-    padding: 2rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.card-text, .button {
-    margin: 2rem;
-}
-
-.button {
     padding: 1rem;
-    border-radius: 0.5rem;
-    background-color: navy;
-    color: white;
-    border: 0;
+    border: 0rem;
+    background-color: azure;
 }
