--- a/style.css
+++ b/style.css
@@ -1,30 +1,28 @@
 body {
     overflow: hidden;
-    background-color: rgb(48, 47, 47);
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(39, 38, 38);
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.container {
-    display: flex;
-}
-
-button {
-    color: whitesmoke;
-    background-color: blueviolet;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
+ul {
+    list-style: none;
+    background-color: rgb(53, 53, 53);
+    padding: 2rem;
+    border-radius: 1rem;
     border: 0.1rem solid white;
 }
 
-.hidden-content {
-    display: none;
-}
-
-.hidden-content.reveal-btn {
-    display: block;
-}
-
-.boxes {
+li {
+    background-color: rgb(70, 69, 69);
     margin: 1rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    border: 0.1rem solid white;
 }
