--- a/style.css
+++ b/style.css
@@ -1,7 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
-body {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    background-color: rgb(36, 35, 35);
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    background: url('img/project-1.jpg') no-repeat center center/ cover;
+}
+
+.container {
+    width: 550px;
+    height: 450px;
+}
+
+.header {
+    font-size: 1.2rem;
+    border: 2px solid white;
     color: white;
+    background-color: #262626;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    width: 80%;
+    margin: 20px auto;
+}
+
+.main-content {
+    width: 100%;
+    height: 300px;
+    background-color: white;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    box-shadow: 0 0 10px;
 }
