--- a/style.css
+++ b/style.css
@@ -45,3 +45,19 @@ body {
     font-size: 1.5rem;
     line-height: 1.5;
 }
+
+.main-content .person {
+    font-size: 1.6rem;
+    color: red;
+    text-transform: uppercase;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.button-area button {
+    background-color: #262626;
+    color: white;
+    font-size: 1.5rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
