--- a/style.css
+++ b/style.css
@@ -61,3 +61,9 @@ body {
     padding: 1rem;
     border-radius: 0.5rem;
 }
+
+.button-area button:active {
+    background-color: white;
+    color: black;
+    scale: 1.2;
+}
