--- a/style.css
+++ b/style.css
@@ -6,3 +6,11 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
+body {
+    background: url('img/project-2.jpg') no-repeat center center/ cover;
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+}
