--- a/style.css
+++ b/style.css
@@ -26,5 +26,16 @@ body {
     color: white;
     border: 0.1rem solid white;
     border-radius: 0.5rem;
-    transition: 0.5s;
+    transition: 0.2s;
+}
+
+#open-btn:hover {
+    scale: 1.15;
+}
+
+#open-btn:active {
+    background-color: white;
+    color: black;
+    border: 0.1rem solid black;
+    scale: 1.1;
 }
