--- a/style.css
+++ b/style.css
@@ -39,3 +39,15 @@ body {
     border: 0.1rem solid black;
     scale: 1.1;
 }
+
+#modal {
+    background-color: white;
+    color: black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1rem;
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+}
