Added styling for the close button

--- a/style.css
+++ b/style.css
@@ -57,3 +57,9 @@ body {
     animation-name: animatemodal;
     animation-duration: 0.4s;
 }
+
+#close-btn {
+    cursor: pointer;
+    font-size: 3rem;
+    color: red;
+}
