--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1;
+    background-color: rgba(0, 0, 0, 0.25);
 }
 
 @keyframes animatemodal {
