--- a/style.css
+++ b/style.css
@@ -12,5 +12,14 @@ body {
     overflow: hidden;
     height: 100vh;
     width: 100vw;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.accordion {
+    width: 65%;
+    background-color: white;
+    padding: 2rem;
+    border-radius: 0.5rem;
 }
