--- a/style.css
+++ b/style.css
@@ -28,3 +28,13 @@ body {
     margin-bottom: 1rem;
     text-align: center;
 }
+
+.accordion .content-container .question {
+    padding: 1rem 0rem;
+    font-size: 1.5rem;
+    line-height: 1.3;
+    cursor: pointer;
+    border-bottom: 1px solid black;
+
+    position: relative;
+}
