Added an icon for the button as a plus sign

--- a/style.css
+++ b/style.css
@@ -38,3 +38,10 @@ body {
 
     position: relative;
 }
+
+.accordion .content-container .question::after {
+    content: '+';
+
+    position: absolute;
+    right: -5px;
+}
