--- a/style.css
+++ b/style.css
@@ -45,3 +45,13 @@ body {
     position: absolute;
     right: -5px;
 }
+
+.accordion .content-container .answer {
+    padding-top: 0.5rem;
+    font-size: 1.3rem;
+    line-height: 1.2;
+    width: 100%;
+    height: 0px;
+    overflow: hidden;
+    transition: 0.5s ease-in-out;
+}
