--- a/style.css
+++ b/style.css
@@ -42,3 +42,9 @@ body {
     margin: 0 1rem;
     border: none;
 }
+
+button i {
+    font-size: 2.5rem;
+    padding: 0.5rem;
+    color: white;
+}
