--- a/style.css
+++ b/style.css
@@ -47,4 +47,17 @@ button i {
     font-size: 2.5rem;
     padding: 0.5rem;
     color: white;
+    width: 50px;
+}
+
+#play {
+    background-color: green;
+}
+
+#pause {
+    background-color: orange;
+}
+
+#reset {
+    background-color: red;
 }
