--- a/style.css
+++ b/style.css
@@ -27,3 +27,10 @@ body {
     display: flex;
     justify-content: space-evenly;
 }
+
+input {
+    flex: 5;
+    border-radius: 0.25rem;
+    font-size: 1.15rem;
+    /* padding: 0.25rem; */
+}
