--- a/style.css
+++ b/style.css
@@ -34,3 +34,14 @@ input {
     font-size: 1.15rem;
     /* padding: 0.25rem; */
 }
+
+#add-task {
+    flex: 1;
+    transition: 0.25s ease-in-out;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+    background-color: white;
+    color: green;
+    border: 0.01rem solid green;
+    border-radius: 0.5rem;
+}
