Added some hover effecrs to the button

--- a/style.css
+++ b/style.css
@@ -45,3 +45,8 @@ input {
     border: 0.01rem solid green;
     border-radius: 0.5rem;
 }
+
+#add-task:hover {
+    background-color: green;
+    color: white;
+}
