--- a/style.css
+++ b/style.css
@@ -49,3 +49,11 @@ input {
     background-color: green;
     color: white;
 }
+
+#task-container {
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 2rem;
+    margin: 2rem;
+    border-radius: 0.5rem;
+    list-style: none;
+}
