--- a/style.css
+++ b/style.css
@@ -72,3 +72,11 @@ input {
     flex: 4;
     font-size: 1.2rem;
 }
+
+.task button {
+    flex: 1;
+    border-radius: 0.25rem;
+    background-color: white;
+    cursor: pointer;
+    border: none;
+}
